20011207
 - (bal) PCRE no longer required.  Banished from the source along with
   fake-regex.h
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/12/06 18:02:32
     [channels.c sshconnect.c]
     shutdown(sock, SHUT_RDWR) not needed here; ok markus@

20011206
 - (bal) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2001/11/14 20:45:08
     [sshd.c]
     errno saving wrapping in a signal handler
   - markus@cvs.openbsd.org 2001/11/16 12:46:13
     [ssh-keyscan.c]
     handle empty lines instead of dumping core; report from sha@sha-1.net
   - stevesk@cvs.openbsd.org 2001/11/17 19:14:34
     [auth2.c auth.c readconf.c servconf.c ssh-agent.c ssh-keygen.c]
     enum/int type cleanup where it made sense to do so; ok markus@
   - markus@cvs.openbsd.org 2001/11/19 11:20:21
     [sshd.c]
     fd leak on HUP; ok stevesk@
   - stevesk@cvs.openbsd.org 2001/11/19 18:40:46
     [ssh-agent.1]
     clarify/state that private keys are not exposed to clients using the 
     agent; ok markus@
   - mpech@cvs.openbsd.org 2001/11/19 19:02:16
     [deattack.c radix.c]
     kill more registers
     millert@ ok
   - markus@cvs.openbsd.org 2001/11/21 15:51:24
     [key.c]
     mem leak
   - stevesk@cvs.openbsd.org 2001/11/21 18:49:14
     [ssh-keygen.1]
     more on passphrase construction; ok markus@
   - stevesk@cvs.openbsd.org 2001/11/22 05:27:29
     [ssh-keyscan.c]
     don't use "\n" in fatal()
   - markus@cvs.openbsd.org 2001/11/22 12:34:22
     [clientloop.c serverloop.c sshd.c]
     volatile sig_atomic_t
   - stevesk@cvs.openbsd.org 2001/11/29 19:06:39
     [channels.h]
     remove dead function prototype; ok markus@
   - markus@cvs.openbsd.org 2001/11/29 22:08:48
     [auth-rsa.c]
     fix protocol error: send 'failed' message instead of a 2nd challenge
     (happens if the same key is in authorized_keys twice).
     reported Ralf_Meister@genua.de; ok djm@
   - stevesk@cvs.openbsd.org 2001/11/30 20:39:28
     [ssh.c]